Get signup to work with Devise

--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "dependencies": {
       "angular": "latest",
       "angular-ui-router": "latest",
-      "angular-animate": "latest"
+      "angular-animate": "latest",
+      "angular-devise": "latest"
     }
   }
 }
