Add and use API to get back current user data

--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
       "angular-ui-router": "latest",
       "angular-animate": "latest",
       "angular-flash": "latest",
-      "angular-devise": "latest"
+      "angular-devise": "latest",
+      "angular-resource": "latest"
     }
   }
 }
