--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,9 @@ cache: bundler
 
 rvm:
   - 2.2.0
+
+addons:
+  postgresql: "9.3"
+
+before_script:
+  - psql -c 'create database jumpkiq_test;' -U postgres
